code reformat for utils and remaining javadoc